Fixed homepage alignment

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -19,16 +19,16 @@
     justify-content: center;
     align-items: center;
     width: 80%;
-    max-width: 100vw;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 80px 0;
+    padding: 8rem 0;
     position: relative;
 }
 
 .home-content {
     flex: 1;
-    max-width: 50%;
-    padding-right: 2rem;
+    max-width: 60%;
+    padding-right: 10%;
     text-align: left;
 }
 
@@ -64,11 +64,9 @@
 }
 
 .profile-container {
-    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
 }
 
 .profile {
